# ap-sotm-client

./: .gitignore  Cargo.toml  README.md  build.sh  filler.md
archipelago_client/: Cargo.toml
archipelago_client/src/: lib.rs
archipelago_protocol/: Cargo.toml
archipelago_protocol/src/: lib.rs
archipelago_rs/: Cargo.toml
archipelago_rs/src/: client.rs  protocol.rs
client_lib/: Cargo.toml
client_lib/src/: ap_thread.rs  data.rs  datapackage.rs  filler.rs  lib.rs  logic.rs  persistent.rs  state.rs
client_web/: Cargo.toml  build.sh
client_web/.cargo/: config.toml
client_web/src/: datapackage.rs  format_json.rs  lib.rs  persistent.rs  wrap_state.rs
generate_data/: Cargo.toml
generate_data/src/: lib.rs
src/: ap_thread.rs  cli.rs  data.rs  format_json.rs  idmap.rs  input_thread.rs  logic.rs  main.rs  state.rs
src/archipelago_rs/: client.rs  mod.rs  protocol.rs
