workspace = { members = [ "archipelago_protocol", "archipelago_client", "client_lib", "client_web", "generate_data"] }
[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
console = "0.15.8"
clap = { version = "4.5.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
archipelago_client = { path = "archipelago_client" }
client_lib = { path = "client_lib" }
anyhow = "1.0"
archipelago_protocol = { path = "./archipelago_protocol" }