[package]
name = "archipelago_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] } 
tungstenite = "0.17"