[package]
name = "client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = { version = "1.0", features = ["rt", "macros", "sync"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] } 
tungstenite = "0.17"
anyhow = "1.0"
strum = { version = "0.26", features = ["derive"] }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
generate_data = { path = "../generate_data" }
archipelago_rs = { path = "../archipelago_rs" }